[tool.poetry]
name = "realtime-api"
version = "0.1.0"
description = ""
authors = ["lisishindanil <lisishindanil@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.8"
fastapi = "^0.115.6"
websockets = "^14.1"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
